--- a/CSS/index.html
+++ b/CSS/index.html
@@ -34,9 +34,10 @@
     <footer>
         <div class="copy">Powered by MA &copy;Copyright</div>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
         </div>
     </footer>
 </body>
